--- a/paper3_ref.bib
+++ b/paper3_ref.bib
@@ -1,5 +1,148 @@
 % This file was created with JabRef 2.10.
 % Encoding: GBK
+@article{oucheriah2013pwm,
+  title={PWM-based adaptive sliding-mode control for boost DC--DC converters},
+  author={Oucheriah, Said and Guo, Liping},
+  journal={Industrial Electronics, IEEE Transactions on},
+  volume={60},
+  number={8},
+  pages={3291--3294},
+  year={2013},
+  publisher={IEEE}
+}
+@article{guzman2016sliding,
+  title={Sliding-Mode Control for a Three-Phase Unity Power Factor Rectifier Operating at Fixed Switching Frequency},
+  author={Guzman, Ramon and Garcia de Vicuna, Luis and Morales, Javier and Castilla, Miguel and Matas, Jose},
+  journal={Power Electronics, IEEE Transactions on},
+  volume={31},
+  number={1},
+  pages={758--769},
+  year={2016},
+  publisher={IEEE}
+}
+@article{liu2015second,
+  title={Second-Order Super-Twisting Sliding Mode Control for Finite-Time Leader-Follower Consensus with Uncertain Nonlinear Multiagent Systems},
+  author={Liu, Nan and Ling, Rui and Huang, Qin and Zhu, Zheren},
+  journal={Mathematical Problems in Engineering},
+  volume={2015},
+  year={2015},
+  publisher={Hindawi Publishing Corporation}
+}
+@article{zhao2015finite,
+  title={Finite-time super-twisting sliding mode control for Mars entry trajectory tracking},
+  author={Zhao, Zhenhua and Yang, Jun and Li, Shihua and Zhang, Zhenxing and Guo, Lei},
+  journal={Journal of the Franklin Institute},
+  volume={352},
+  number={11},
+  pages={5226--5248},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@inproceedings{palosz2015laser,
+  title={Laser Pointing for Orbital Debris Mitigation Using Higher Order Sliding Mode Control and Observation Techniques},
+  author={Palosz, Arthur and Shtessel, Y and Fork, Richard},
+  booktitle={53rd AIAA Aerospace Sciences Meeting},
+  pages={1160},
+  year={2015}
+}
+@inproceedings{zhang2015attitude,
+  title={Attitude control for stratospheric autonomous airship based on dual-loop sliding mode},
+  author={Zhang, Dong and Cao, Lin},
+  booktitle={Signal Processing, Communications and Computing (ICSPCC), 2015 IEEE International Conference on},
+  pages={1--5},
+  year={2015},
+  organization={IEEE}
+}
+@article{zhao2015nonlinear,
+  title={Nonlinear robust sliding mode control of a quadrotor unmanned aerial vehicle based on immersion and invariance method},
+  author={Zhao, Bo and Xian, Bin and Zhang, Yao and Zhang, Xu},
+  journal={International Journal of Robust and Nonlinear Control},
+  volume={25},
+  number={18},
+  pages={3714--3731},
+  year={2015},
+  publisher={Wiley Online Library}
+}
+
+@article{mu2016switching,
+  title={On switching manifold design for terminal sliding mode control},
+  author={Mu, Chaoxu and Xu, Wei and Sun, Changyin},
+  journal={Journal of the Franklin Institute},
+  volume={353},
+  number={7},
+  pages={1553--1572},
+  year={2016},
+  publisher={Elsevier}
+}
+@inproceedings{bhat1997finite,
+  title={Finite-time stability of homogeneous systems},
+  author={Bhat, Sanjay P and Bernstein, Dennis S},
+  booktitle={Proceedings of the American control conference},
+  volume={4},
+  pages={2513--2514},
+  year={1997},
+  organization={AMERICAN AUTOMATIC CONTROL COUNCIL}
+}
+@article{haimo1986finite,
+  title={Finite time controllers},
+  author={Haimo, VARDA TEPPER},
+  journal={SIAM Journal on Control and Optimization},
+  volume={24},
+  number={4},
+  pages={760--770},
+  year={1986},
+  publisher={SIAM}
+}
+
+@article{castillo2015higher,
+  title={Higher order sliding modes manifold design via singular LQ control},
+  author={Castillo, Ismael and Jim{\'e}nez-Liz{\'a}rraga, Manuel and Ibarra, Efra{\'\i}n},
+  journal={Journal of the Franklin Institute},
+  volume={352},
+  number={7},
+  pages={2810--2830},
+  year={2015},
+  publisher={Elsevier}
+}
+@article{li2015robust,
+  title={Robust adaptive sliding mode control for uncertain nonlinear MIMO system with guaranteed steady state tracking error bounds},
+  author={Li, Peng and Ma, Jianjun and Zheng, Zhiqiang},
+  journal={Journal of the Franklin Institute},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{zheng2016sliding,
+  title={Sliding mode control design for linear systems subject to quantization parameter mismatch},
+  author={Zheng, Bo-Chao and Park, Ju H},
+  journal={Journal of the Franklin Institute},
+  volume={353},
+  number={1},
+  pages={37--53},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{meza2015output,
+  title={Output sliding mode-based stabilization of underactuated 3-DOF helicopter prototype and its experimental verification},
+  author={Meza-S{\'a}nchez, Marlen and Aguilar, Luis T and Orlov, Yury},
+  journal={Journal of the Franklin Institute},
+  volume={352},
+  number={4},
+  pages={1580--1594},
+  year={2015},
+  publisher={Elsevier}
+}
+@article{modirrousta2015finite,
+  title={Finite Time Adaptive Optimal Integral Sliding Mode Control for a Class of Uncertain Second Order Nonlinear Systems with Input Nonlinearity},
+  author={Modirrousta, Alireza and Delavari, Hadi},
+  journal={Journal of Advances in Computer Research},
+  volume={6},
+  number={4},
+  pages={81--106},
+  year={2015}
+}
 @article{feng2002non,
   title={Non-singular terminal sliding mode control of rigid manipulators},
   author={Feng, Yong and Yu, Xinghuo and Man, Zhihong},
